--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "@testing-library/user-event": "^12.6.3",
     "axios": "^0.21.1",
     "d3": "^6.5.0",
-    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "sass": "^1.32.8",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
