Added Logo, styling, Changes to similar artist class

--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^12.6.3",
     "axios": "^0.21.1",
     "d3": "^6.5.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-audio-player": "^0.14.0",
     "react-dom": "^17.0.1",
+    "react-helmet-async": "^1.0.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "sass": "^1.32.8",
