--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "webapp",
+  "name": "BandViz",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.6.3",
-    "axios": "^0.21.1",
-    "d3": "^6.5.0",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.4",
+    "d3": "^7.6.1",
+    "lottie-react": "^2.3.1",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
     "react-audio-player": "^0.14.0",
-    "react-dom": "^17.0.1",
-    "react-helmet-async": "^1.0.9",
-    "react-lottie": "^1.2.3",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2",
-    "sass": "^1.32.8",
-    "web-vitals": "^1.1.0"
+    "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
+    "react-router-dom": "^5.3.4",
+    "react-scripts": "^5.0.1",
+    "sass": "^1.56.1",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
